initial CSS commit, style large boxes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
     <title>idess.io</title>
   </head>
   <body>
@@ -28,7 +29,9 @@
     <footer>
       <section id="contact-footer">
       </section>
-      2020 &copy; Idess Lee. All rights reserved.
+      <p>
+        2020 &copy; Idess Lee. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
