add text styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
     <title>idess.io</title>
   </head>
   <body>
@@ -13,16 +13,17 @@
       <section id="menu">
         <ul>
           <li class="selected">home</li>
-          <li>projects</li>
-          <li>university</li>
-          <li>life</li>
-          <li>contact</li>
+          <li><a href="#projects">projects</a></li>
+          <li><a href="#university">university</a></li>
+          <li><a href="#life">life</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
       </section>
       <section id="content">
         <h1>
-          Hi! I'm Idess Lee, an <strong>aspiring systems engineer</strong> and a
-          <span>lavender</span> enthusiast.
+          Hi! I'm <strong>Idess Lee</strong>,<br>
+          an aspiring <strong>systems engineer</strong><br>
+          and a <span>lavender</span> fanatic.
         </h1>
       </section>
     </main>
