add link styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <section id="menu">
         <ul>
-          <li class="selected">home</li>
+          <li class="selected">home</a></li>
           <li><a href="#projects">projects</a></li>
           <li><a href="#university">university</a></li>
           <li><a href="#life">life</a></li>
