change front page text decorations

--- a/index.html
+++ b/index.html
@@ -12,19 +12,44 @@
     <main>
       <section id="menu">
         <ul>
-          <li class="selected">home</a></li>
-          <li><a href="#projects">projects</a></li>
-          <li><a href="#university">university</a></li>
-          <li><a href="#life">life</a></li>
-          <li><a href="#contact">contact</a></li>
+          <li class="selected">home</li>
+          <li>projects</li>
+          <li>university</li>
+          <li>life</li>
+          <li>contact</li>
         </ul>
       </section>
       <section id="content">
-        <h1>
-          Hi! I'm <strong>Idess Lee</strong>,<br>
-          an aspiring <strong>systems engineer</strong><br>
-          and a <span>lavender</span> fanatic.
-        </h1>
+        <section id="home">
+          <h1>
+            Hi! I'm <strong>Idess Lee</strong>,<br>
+            an aspiring <strong>software engineer</strong>
+          </h1>
+          <h2>
+            with a <span class="underline">strong academic background</span>
+            and a <span class="underline">passion for problem solving</span>.
+          </h2>
+        </section>
+        <section id="projects-container" class="hidden">
+          <section class="project">
+            <h2>Distributed database</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
+          <section class="project">
+            <h2>Project rakan</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
+          <section class="project">
+            <h2>Search engine</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
+        </section>
       </section>
     </main>
     <footer>
