add external links to home page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             with a <span class="underline">strong academic background</span>
             and a <span class="underline">passion for problem solving</span>.
           </h2>
+          <h3>
+            <a href="/">idess@cs.uw.edu</a>;<br>
+            <a href="https://www.linkedin.com/in/idess/">linkedin</a>,
+            <a href="https://github.com/idess1">github</a>;
+          </h3>
         </section>
         <section id="projects-container" class="hidden">
           <section class="project">
