add iconography to homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
     <script src="index.js"></script>
     <title>idess.io</title>
   </head>
@@ -22,6 +22,7 @@
       </section>
       <section id="content">
         <section id="home">
+          <img src="lotus.png" alt="lotus">
           <h1>
             Hi! I'm <strong>Idess Lee</strong>,<br>
             an aspiring <strong>software engineer</strong>
@@ -62,7 +63,8 @@
       <section id="contact-footer">
       </section>
       <p>
-        2020 &copy; Idess Lee. All rights reserved.
+        2020 &copy; Idess Lee. All rights reserved; iconography &copy;
+        <a href="https://www.flaticon.com/authors/good-ware">Good Ware</a>
       </p>
     </footer>
   </body>
