change menu design

--- a/index.html
+++ b/index.html
@@ -5,57 +5,53 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
-    <title>idess.io</title>
+    <title>Idess Lee, Software Engineer</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/" class="selected">home</a>
+        <a href="#projects">projects</a>
+        <a href="/">r&eacute;sum&eacute;</a>
+        <a href="#about">about</a>
+      </nav>
+    </header>
     <main>
-      <section id="menu">
-        <ul>
-          <li class="selected">home</li>
-          <li>projects</li>
-          <li>university</li>
-          <li>life</li>
-          <li>contact</li>
-        </ul>
+      <section id="home">
+        <h1>
+          Hi! I'm <strong><em>Idess Lee</em></strong>,<br>
+          an aspiring <strong><em>software engineer</em></strong>
+        </h1>
+        <h2>
+          with a commitment to learning<br>
+          and a passion for problem solving.
+        </h2>
+        <h3>
+          <a href="/">idess@cs.uw.edu</a><br>
+          <a href="https://www.linkedin.com/in/idess/">LinkedIn</a>,
+          <a href="https://github.com/idess1">GitHub</a>
+        </h3>
       </section>
-      <section id="content">
-        <section id="home">
-          <img src="lotus.png" alt="lotus">
-          <h1>
-            Hi! I'm <strong>Idess Lee</strong>,<br>
-            an aspiring <strong>software engineer</strong>
-          </h1>
-          <h2>
-            with a <span class="underline">strong academic background</span>
-            and a <span class="underline">passion for problem solving</span>.
-          </h2>
-          <h3>
-            <a href="/">idess@cs.uw.edu</a>;<br>
-            <a href="https://www.linkedin.com/in/idess/">linkedin</a>,
-            <a href="https://github.com/idess1">github</a>;
-          </h3>
+      <section id="projects-container">
+        <section class="project">
+          <h2>Distributed Database</h2>
+          <p>
+            Description of project.
+          </p>
         </section>
-        <section id="projects-container" class="hidden">
-          <section class="project">
-            <h2>Distributed database</h2>
-            <p>
-              Description of project.
-            </p>
-          </section>
-          <section class="project">
-            <h2>Project rakan</h2>
-            <p>
-              Description of project.
-            </p>
-          </section>
-          <section class="project">
-            <h2>Search engine</h2>
-            <p>
-              Description of project.
-            </p>
-          </section>
+        <section class="project">
+          <h2>Project Rakan</h2>
+          <p>
+            Description of project.
+          </p>
+        </section>
+        <section class="project">
+          <h2>Search Engine</h2>
+          <p>
+            Description of project.
+          </p>
         </section>
       </section>
     </main>
@@ -63,8 +59,7 @@
       <section id="contact-footer">
       </section>
       <p>
-        2020 &copy; Idess Lee. All rights reserved; iconography &copy;
-        <a href="https://www.flaticon.com/authors/good-ware">Good Ware</a>
+        2020 &copy; Idess Lee
       </p>
     </footer>
   </body>
