--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <header>
       <nav>
         <a href="/" class="selected">home</a>
-        <a href="#projects">projects</a>
-        <a href="/">r&eacute;sum&eacute;</a>
         <a href="#about">about</a>
+        <a href="/">r&eacute;sum&eacute;</a>
+        <a href="https://www.linkedin.com/in/idess/">linkedin</a>
+        <a href="https://github.com/idess1">github</a>
       </nav>
     </header>
     <main>
@@ -28,12 +29,14 @@
           with a commitment to learning<br>
           and a passion for problem solving.
         </h2>
-        <h3>
-          <a href="/">idess@cs.uw.edu</a><br>
-          <a href="https://www.linkedin.com/in/idess/">LinkedIn</a>,
-          <a href="https://github.com/idess1">GitHub</a>
-        </h3>
       </section>
+      <div id="home-br">
+        <div class="hr"></div>
+        <h3>
+          Click project for for details
+        </h3>
+        <div class="hr"></div>
+      </div>
       <section id="projects-container">
         <section class="project">
           <h2>Distributed Database</h2>
