add project container layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="/" class="selected">home</a>
         <a href="#about">about</a>
         <a href="/">r&eacute;sum&eacute;</a>
-        <a href="https://www.linkedin.com/in/idess/">linkedin</a>
-        <a href="https://github.com/idess1">github</a>
+        <a href="https://www.linkedin.com/in/idess/" target="_blank">linkedin</a>
+        <a href="https://github.com/idess1" target="_blank">github</a>
       </nav>
     </header>
     <main>
@@ -38,23 +38,29 @@
         <div class="hr"></div>
       </div>
       <section id="projects-container">
-        <section class="project">
-          <h2>Distributed Database</h2>
-          <p>
-            Description of project.
-          </p>
+        <section class="project-card">
+          <section class="project">
+            <h2>Distributed Database</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
         </section>
-        <section class="project">
-          <h2>Project Rakan</h2>
-          <p>
-            Description of project.
-          </p>
+        <section class="project-card">
+          <section class="project">
+            <h2>Project Rakan</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
         </section>
-        <section class="project">
-          <h2>Search Engine</h2>
-          <p>
-            Description of project.
-          </p>
+        <section class="project-card">
+          <section class="project">
+            <h2>Search Engine</h2>
+            <p>
+              Description of project.
+            </p>
+          </section>
         </section>
       </section>
     </main>
