init project design

--- a/index.html
+++ b/index.html
@@ -40,15 +40,28 @@
       <section id="projects-container">
         <section class="project-card">
           <section class="project">
-            <h2>Distributed Database</h2>
-            <p>
-              Description of project.
-            </p>
+            <section class="title">
+              <img src="img/project-rakan.png" alt="Project Rakan Icon">
+              <section class="name-class">
+                <h2>Project Rakan</h2>
+                <p>
+                  Personal + class project
+                </p>
+              </section>
+            </section>
+            <div class="hr"></div>
+            <section>
+              <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
+            </section>
+            <div class="hr"></div>
+            <section>
+              <p><em>Technologies:</em> C, C++, CMake, Docker, Google Test</p>
+            </section>
           </section>
         </section>
         <section class="project-card">
           <section class="project">
-            <h2>Project Rakan</h2>
+            <h2>Distributed Database</h2>
             <p>
               Description of project.
             </p>
