redesign project cards

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
       <section id="home">
         <h1>
-          Hi! I'm <strong><em>Idess Lee</em></strong>,<br>
-          an aspiring <strong><em>software engineer</em></strong>
+          Hi there! I'm <strong><em>Idess Lee</em></strong>,<br>
+          aspiring <strong><em>software engineer</em></strong>
         </h1>
         <h2>
           with a commitment to learning<br>
@@ -44,35 +44,52 @@
               <img src="img/project-rakan.png" alt="Project Rakan Icon">
               <section class="name-class">
                 <h2>Project Rakan</h2>
-                <p>
-                  Personal + class project
-                </p>
+                <h3>
+                  Group-based, personal + class project
+                </h3>
+                <div class="hr"></div>
+                <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
+                <div class="hr"></div>
+                <h3>C, C++, CMake, Docker, Google Test</h3>
               </section>
             </section>
-            <div class="hr"></div>
-            <section>
-              <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
-            </section>
-            <div class="hr"></div>
-            <section>
-              <p><em>Technologies:</em> C, C++, CMake, Docker, Google Test</p>
+          </section>
+        </section>
+        <section class="project-card">
+          <section class="project">
+            <section class="title">
+              <img src="img/distributed-database.png" alt="Distributed Database Icon">
+              <section class="name-class">
+                <h2>Distributed Database</h2>
+                <h3>
+                  Pair class project
+                </h3>
+                <div class="hr"></div>
+                <p>A distributed, fault-tolerant, sharded key-value database.</p>
+                <div class="hr"></div>
+                <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
+              </section>
             </section>
           </section>
         </section>
         <section class="project-card">
           <section class="project">
-            <h2>Distributed Database</h2>
-            <p>
-              Description of project.
-            </p>
-          </section>
-        </section>
-        <section class="project-card">
-          <section class="project">
-            <h2>Search Engine</h2>
-            <p>
-              Description of project.
-            </p>
+            <section class="title">
+              <img src="img/portfolio.png" alt="Distributed Database Icon">
+              <section class="name-class">
+                <h2>Portfolio</h2>
+                <h3>
+                  Individual project
+                </h3>
+                <div class="hr"></div>
+                <p>
+                  You're looking at it! &#9786;<br>
+                  A simple website of my portfolio.
+                </p>
+                <div class="hr"></div>
+                <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
+              </section>
+            </section>
           </section>
         </section>
       </section>
