finish all project cards

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
               <section class="name-class">
                 <h2>Project Rakan</h2>
                 <h3>
-                  Group-based, personal + class project
+                  Group personal + class project
                 </h3>
                 <div class="hr"></div>
                 <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
                 <div class="hr"></div>
-                <h3>C, C++, CMake, Docker, Google Test</h3>
+                <h3>C++, CMake, Docker, Google Test</h3>
               </section>
             </section>
           </section>
@@ -75,19 +75,76 @@
         <section class="project-card">
           <section class="project">
             <section class="title">
-              <img src="img/portfolio.png" alt="Distributed Database Icon">
+              <img src="img/portfolio.png" alt="Portfolio Icon">
               <section class="name-class">
                 <h2>Portfolio</h2>
                 <h3>
-                  Individual project
+                  Individual personal project
                 </h3>
                 <div class="hr"></div>
                 <p>
                   You're looking at it! &#9786;<br>
-                  A simple website of my portfolio.
+                  A simple website to showcase my portfolio.
                 </p>
                 <div class="hr"></div>
                 <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
+              </section>
+            </section>
+          </section>
+        </section>
+        <section class="project-card">
+          <section class="project">
+            <section class="title">
+              <img src="img/flight-service.png" alt="Flight Service Icon">
+              <section class="name-class">
+                <h2>Flight Service</h2>
+                <h3>
+                  Individual class project
+                </h3>
+                <div class="hr"></div>
+                <p>
+                  A CLI application that allows a user to search, book, pay, and cancel flights concurrently.
+                </p>
+                <div class="hr"></div>
+                <h3>Java, JUnit, Integration tests, JDBC, MSSQL, Azure</h3>
+              </section>
+            </section>
+          </section>
+        </section>
+        <section class="project-card">
+          <section class="project">
+            <section class="title">
+              <img src="img/search-engine.png" alt="Search Engine Icon">
+              <section class="name-class">
+                <h2>Search Engine</h2>
+                <h3>
+                  Individual class project
+                </h3>
+                <div class="hr"></div>
+                <p>
+                  A multi-threaded web-based search engine that processes multi-word queries and static file queries.
+                </p>
+                <div class="hr"></div>
+                <h3>C, C++, Make, Google Test</h3>
+              </section>
+            </section>
+          </section>
+        </section>
+        <section class="project-card">
+          <section class="project">
+            <section class="title">
+              <img src="img/yipper.png" alt="Yipper Icon">
+              <section class="name-class">
+                <h2>Yipper</h2>
+                <h3>
+                  Individual class project
+                </h3>
+                <div class="hr"></div>
+                <p>
+                  A social-media website that allows users to post and like messages. Similar to Twitter.
+                </p>
+                <div class="hr"></div>
+                <h3>JavaScript, Node.js, SQLite, HTML5, CSS3</h3>
               </section>
             </section>
           </section>
