--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <header>
       <nav>
-        <a href="/" class="selected">home</a>
-        <a href="#about">about</a>
+        <a href="index.html" class="selected">home</a>
+        <a href="about.html">about</a>
         <a href="/">r&eacute;sum&eacute;</a>
         <a href="https://www.linkedin.com/in/idess/" target="_blank">linkedin</a>
         <a href="https://github.com/idess1" target="_blank">github</a>
@@ -30,7 +30,7 @@
           and a passion for problem solving.
         </h2>
       </section>
-      <div id="home-br">
+      <div class="break">
         <div class="hr"></div>
         <h3>
           Click project for for details
@@ -40,9 +40,9 @@
       <section id="projects-container">
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/project-rakan.png" alt="Project Rakan Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Project Rakan</h2>
                 <h3>
                   Group personal + class project
@@ -57,9 +57,9 @@
         </section>
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/distributed-database.png" alt="Distributed Database Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Distributed Database</h2>
                 <h3>
                   Pair class project
@@ -74,9 +74,9 @@
         </section>
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/portfolio.png" alt="Portfolio Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Portfolio</h2>
                 <h3>
                   Individual personal project
@@ -94,9 +94,9 @@
         </section>
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/flight-service.png" alt="Flight Service Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Flight Service</h2>
                 <h3>
                   Individual class project
@@ -113,9 +113,9 @@
         </section>
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/search-engine.png" alt="Search Engine Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Search Engine</h2>
                 <h3>
                   Individual class project
@@ -132,9 +132,9 @@
         </section>
         <section class="project-card">
           <section class="project">
-            <section class="title">
+            <section class="container">
               <img src="img/yipper.png" alt="Yipper Icon">
-              <section class="name-class">
+              <section class="description">
                 <h2>Yipper</h2>
                 <h3>
                   Individual class project
@@ -150,13 +150,11 @@
           </section>
         </section>
       </section>
+      <div class="break">
+        <h3>
+          2020 &copy; Idess Lee
+        </h3>
+      </div>
     </main>
-    <footer>
-      <section id="contact-footer">
-      </section>
-      <p>
-        2020 &copy; Idess Lee
-      </p>
-    </footer>
   </body>
 </html>
