add about.html img

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
     <title>Idess Lee, Software Engineer</title>
@@ -20,6 +21,9 @@
       </nav>
     </header>
     <main>
+      <section id="abt-container">
+        <img src="/img/portrait.png" alt="Portrait">
+      </section>
     </main>
   </body>
 </html>
