add about me container

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
           </section>
         </section>
       </section>
-      <div class="break">
+      <footer>
         <h3>
           2020 &copy; Idess Lee
         </h3>
-      </div>
+      </footer>
     </main>
   </body>
 </html>
