--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
-    <title>Idess Lee, Software Engineer</title>
+    <title>Idess Lee</title>
   </head>
   <body>
     <header>
@@ -23,7 +23,31 @@
     <main>
       <section id="abt-container">
         <img src="/img/portrait.png" alt="Portrait">
+        <section>
+          <h2>Hello hello! My name is <strong>Idess</strong> (eye-dis).</h2><br>
+          <div class="hr"></div><br>
+          <p>
+            I am a curious developer, rockstar student, and lifelong learner who approaches coding
+            with a thoughtful and attentive mind. Most recently, I was the Co-Founder of and Senior
+            Engineer for Project Rakan, where I took on a leadership role in managing a team of 6
+            developers.
+          </p>
+          <p>
+            My other talents include: speaking 4 languages fluently, parallel parking, designing in
+            Adobe XD, and peeling a tangerine in one go. Outside of coding, I like to learn (human)
+            languages, play and watch video games, and weightlift. On the rare sunny days in
+            Seattle, I like to casually hike as well.
+          </p>
+          <p>
+            Get to know me over e-mail or LinkedIn!
+          </p>
+        </section>
       </section>
+      <footer>
+        <h3>
+          2020 &copy; Idess Lee
+        </h3>
+      </footer>
     </main>
   </body>
 </html>
