add details page to project rakan

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="abt-container">
-        <img src="/img/portrait.png" alt="Portrait">
+        <img src="img/portrait.png" alt="Portrait">
         <section>
           <h2>Hello hello! My name is <strong>Idess</strong> (eye-dis).</h2><br>
           <div class="hr"></div><br>
