--- a/index.html
+++ b/index.html
@@ -33,27 +33,29 @@
       <div class="break">
         <div class="hr"></div>
         <h3>
-          Click project for for details
+          Click project for details
         </h3>
         <div class="hr"></div>
       </div>
       <section id="projects-container">
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/project-rakan.png" alt="Project Rakan Icon">
-              <section class="description">
-                <h2>Project Rakan</h2>
-                <h3>
-                  Group personal + class project
-                </h3>
-                <div class="hr"></div>
-                <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
-                <div class="hr"></div>
-                <h3>C++, CMake, Docker, Google Test</h3>
+          <a href="rakan.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/project-rakan.png" alt="Project Rakan Icon">
+                <section class="description">
+                  <h2>Project Rakan</h2>
+                  <h3>
+                    Group project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
+              <div class="hr"></div>
+              <h3>C++, CMake, Docker, Google Test</h3>
             </section>
-          </section>
+          </a>
         </section>
         <section class="project-card">
           <section class="project">
@@ -64,12 +66,12 @@
                 <h3>
                   Pair class project
                 </h3>
-                <div class="hr"></div>
-                <p>A distributed, fault-tolerant, sharded key-value database.</p>
-                <div class="hr"></div>
-                <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
               </section>
             </section>
+            <div class="hr"></div>
+            <p>A distributed, fault-tolerant, sharded key-value database.</p>
+            <div class="hr"></div>
+            <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
           </section>
         </section>
         <section class="project-card">
@@ -81,15 +83,15 @@
                 <h3>
                   Individual personal project
                 </h3>
-                <div class="hr"></div>
-                <p>
-                  You're looking at it! &#9786;<br>
-                  A simple website to showcase my portfolio.
-                </p>
-                <div class="hr"></div>
-                <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
               </section>
             </section>
+            <div class="hr"></div>
+            <p>
+              You're looking at it! &#9786;<br>
+              A simple website to showcase my portfolio.
+            </p>
+            <div class="hr"></div>
+            <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
           </section>
         </section>
         <section class="project-card">
@@ -101,14 +103,14 @@
                 <h3>
                   Individual class project
                 </h3>
-                <div class="hr"></div>
-                <p>
-                  A CLI application that allows a user to search, book, pay, and cancel flights concurrently.
-                </p>
-                <div class="hr"></div>
-                <h3>Java, JUnit, Integration tests, JDBC, MSSQL, Azure</h3>
               </section>
             </section>
+            <div class="hr"></div>
+            <p>
+              A CLI application that allows a user to search, book, pay, and cancel flights concurrently.
+            </p>
+            <div class="hr"></div>
+            <h3>Java, JUnit, Integration tests, JDBC, MSSQL, Azure</h3>
           </section>
         </section>
         <section class="project-card">
@@ -120,14 +122,14 @@
                 <h3>
                   Individual class project
                 </h3>
-                <div class="hr"></div>
-                <p>
-                  A multi-threaded web-based search engine that processes multi-word queries and static file queries.
-                </p>
-                <div class="hr"></div>
-                <h3>C, C++, Make, Google Test</h3>
               </section>
             </section>
+            <div class="hr"></div>
+            <p>
+              A multi-threaded web-based search engine that processes multi-word queries and static file queries.
+            </p>
+            <div class="hr"></div>
+            <h3>C, C++, Make, Google Test</h3>
           </section>
         </section>
         <section class="project-card">
@@ -139,21 +141,19 @@
                 <h3>
                   Individual class project
                 </h3>
-                <div class="hr"></div>
-                <p>
-                  A social-media website that allows users to post and like messages. Similar to Twitter.
-                </p>
-                <div class="hr"></div>
-                <h3>JavaScript, Node.js, SQLite, HTML5, CSS3</h3>
               </section>
             </section>
+            <div class="hr"></div>
+            <p>
+              A social-media website that allows users to post and like messages. Similar to Twitter.
+            </p>
+            <div class="hr"></div>
+            <h3>JavaScript, Node.js, SQLite, HTML5, CSS3</h3>
           </section>
         </section>
       </section>
       <footer>
-        <h3>
-          2020 &copy; Idess Lee
-        </h3>
+        <h3 id="copyright">2020 &copy; Idess Lee</h3>
       </footer>
     </main>
   </body>
