add distributed database details page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
-    <title>Idess Lee, Software Engineer</title>
+    <title>Idess Lee</title>
   </head>
   <body>
     <header>
@@ -58,21 +58,23 @@
           </a>
         </section>
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/distributed-database.png" alt="Distributed Database Icon">
-              <section class="description">
-                <h2>Distributed Database</h2>
-                <h3>
-                  Pair class project
-                </h3>
+          <a href="database.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/distributed-database.png" alt="Distributed Database Icon">
+                <section class="description">
+                  <h2>Distributed Database</h2>
+                  <h3>
+                    Pair class project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>A distributed, fault-tolerant, sharded key-value database.</p>
+              <div class="hr"></div>
+              <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
             </section>
-            <div class="hr"></div>
-            <p>A distributed, fault-tolerant, sharded key-value database.</p>
-            <div class="hr"></div>
-            <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
-          </section>
+          </a>
         </section>
         <section class="project-card">
           <section class="project">
