--- a/rakan.html
+++ b/rakan.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="details.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
-    <title>Idess Lee, Software Engineer</title>
+    <title>Idess Lee</title>
   </head>
   <body>
     <header>
@@ -107,9 +107,6 @@
             a failure. I took responsibility for the oversight and strived to fix the bug, which I
             was able to do so via extensive testing. This made me believe in test-driven development
             and test-driven debugging.
-          </p>
-          <p>
-            Secondly, I learned that 
           </p>
         </section>
       </section>
