add rakan details + portfolio

--- a/rakan.html
+++ b/rakan.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="index.html" class="selected">home</a>
         <a href="about.html">about</a>
-        <a href="https://drive.google.com/file/d/1U4xmFwVSgkvcPzhJ-2xach51T6WzQ-L_/view?usp=sharing" target="_blank">r&eacute;sum&eacute;</a>
+        <a href="/">r&eacute;sum&eacute;</a>
         <a href="https://www.linkedin.com/in/idess/" target="_blank">linkedin</a>
         <a href="https://github.com/idess1" target="_blank">github</a>
       </nav>
@@ -107,6 +107,13 @@
             a failure. I took responsibility for the oversight and strived to fix the bug, which I
             was able to do so via extensive testing. This made me believe in test-driven development
             and test-driven debugging.
+          </p>
+          <p>
+            Secondly, I learn to <strong>communicate and collaborate with a large team</strong>
+            efficiently. As the co-founder, I assisted in helping the front-end and back-end
+            communicate both in-person and on code through a RESTful API. I also learned to
+            <strong>collaborate through pair programming</strong> which the back-end team to
+            both ensure my teammate is up to pace and help me think through my code.
           </p>
         </section>
       </section>
