edit project structures

--- a/projects/database.html
+++ b/projects/database.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="details.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
     <script src="index.js"></script>
@@ -13,8 +13,8 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="selected">home</a>
-        <a href="about.html">about</a>
+        <a href="../index.html">home</a>
+        <a href="../about.html">about</a>
         <a href="https://drive.google.com/file/d/1U4xmFwVSgkvcPzhJ-2xach51T6WzQ-L_/view?usp=sharing" target="_blank">r&eacute;sum&eacute;</a>
         <a href="https://www.linkedin.com/in/idess/" target="_blank">linkedin</a>
         <a href="https://github.com/idess1" target="_blank">github</a>
@@ -25,7 +25,7 @@
         <section class="project-card">
           <section class="project">
             <section class="container">
-              <img src="img/distributed-database.png" alt="Distributed Database Icon">
+              <img src="../img/distributed-database.png" alt="Distributed Database Icon">
               <section class="description">
                 <h2>Distributed Database</h2>
                 <h3>
