--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <section id="projects-container">
         <section class="project-card">
-          <a href="rakan.html">
+          <a href="projects/rakan.html">
             <section class="project">
               <section class="container">
                 <img src="img/project-rakan.png" alt="Project Rakan Icon">
@@ -58,7 +58,7 @@
           </a>
         </section>
         <section class="project-card">
-          <a href="database.html">
+          <a href="projects/database.html">
             <section class="project">
               <section class="container">
                 <img src="img/distributed-database.png" alt="Distributed Database Icon">
@@ -77,24 +77,26 @@
           </a>
         </section>
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/portfolio.png" alt="Portfolio Icon">
-              <section class="description">
-                <h2>Portfolio</h2>
-                <h3>
-                  Individual personal project
-                </h3>
+          <a href="projects/portfolio.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/portfolio.png" alt="Portfolio Icon">
+                <section class="description">
+                  <h2>Portfolio</h2>
+                  <h3>
+                    Individual personal project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>
+                You're looking at it! &#9786;<br>
+                A simple website to showcase my portfolio.
+              </p>
+              <div class="hr"></div>
+              <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
             </section>
-            <div class="hr"></div>
-            <p>
-              You're looking at it! &#9786;<br>
-              A simple website to showcase my portfolio.
-            </p>
-            <div class="hr"></div>
-            <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
-          </section>
+          </a>
         </section>
         <section class="project-card">
           <section class="project">
