small change to details page design

--- a/about.html
+++ b/about.html
@@ -39,7 +39,12 @@
             Seattle, I like to casually hike as well.
           </p>
           <p>
-            Get to know me over e-mail or LinkedIn!
+            Get to know me over <span id="email">e-mail</span> or
+            <a href="https://www.linkedin.com/in/idess/">LinkedIn</a>!
+          </p>
+          <p>
+            Big thanks to <a href="https://www.flaticon.com/authors/flat-icons" target="_blank">Flat Icons</a> for
+            my project icons!
           </p>
         </section>
       </section>
