--- a/projects/database.html
+++ b/projects/database.html
@@ -37,23 +37,24 @@
             <p>A distributed, fault-tolerant, sharded key-value database.</p>
             <div class="hr"></div>
             <h3>Java, JUnit, Lombok, Apache Commons Lang, Google Guava</h3>
+            <div class="hr"></div>
+            <table>
+              <tr>
+                <td>Role</td>
+                <td>Software Engineer + Chief Debugger</td>
+              </tr>
+              <tr>
+                <td>Date</td>
+                <td>March 2020 &mdash; June 2020</td>
+              </tr>
+              <tr>
+                <td>Link</td>
+                <td>Private repo available upon request</td>
+              </tr>
+            </table>
           </section>
         </section>
         <section id="details-card">
-          <table>
-            <tr>
-              <td>Role</td>
-              <td>Software Engineer + Chief Debugger</td>
-            </tr>
-            <tr>
-              <td>Date</td>
-              <td>March 2020 &mdash; June 2020</td>
-            </tr>
-            <tr>
-              <td>Link</td>
-              <td>Private repo available upon request</td>
-            </tr>
-          </table>
           <div class="break">
             <div class="hr"></div>
             <h3>Goals</h3>
