--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -40,26 +40,27 @@
             </p>
             <div class="hr"></div>
             <h3>JavaScript, HTML5, CSS3, Adobe XD</h3>
+            <div class="hr"></div>
+            <table>
+              <tr>
+                <td>Role</td>
+                <td>Front-end engineer</td>
+              </tr>
+              <tr>
+                <td>Date</td>
+                <td>August 2020</td>
+              </tr>
+              <tr>
+                <td>Link</td>
+                <td>
+                  <a href="https://github.com/idess1/idess.io" target="_blank">GitHub</a> +
+                  <a href="https://xd.adobe.com/view/61be7bce-d26e-48ab-bd04-59a6f0e6ba2c-34ed/?fullscreen" target="_blank">Prototype</a>
+                </td>
+              </tr>
+            </table>
           </section>
         </section>
         <section id="details-card">
-          <table>
-            <tr>
-              <td>Role</td>
-              <td>Front-end engineer</td>
-            </tr>
-            <tr>
-              <td>Date</td>
-              <td>August 2020</td>
-            </tr>
-            <tr>
-              <td>Link</td>
-              <td>
-                <a href="https://github.com/idess1/idess.io" target="_blank">GitHub</a> +
-                <a href="https://xd.adobe.com/view/61be7bce-d26e-48ab-bd04-59a6f0e6ba2c-34ed/?fullscreen" target="_blank">Prototype</a>
-              </td>
-            </tr>
-          </table>
           <div class="break">
             <div class="hr"></div>
             <h3>Goals</h3>
