--- a/projects/rakan.html
+++ b/projects/rakan.html
@@ -37,26 +37,27 @@
             <p>A SaaS for voters, lawyers, and politicians to analyze gerrymandering.</p>
             <div class="hr"></div>
             <h3>C++, CMake, Docker, Google Test</h3>
+            <div class="hr"></div>
+            <table>
+              <tr>
+                <td>Role</td>
+                <td>Co-founder + Senior Engineer</td>
+              </tr>
+              <tr>
+                <td>Date</td>
+                <td>March 2020 &mdash; June 2020</td>
+              </tr>
+              <tr>
+                <td>Link</td>
+                <td>
+                  <a href="https://github.com/project-rakan" target="_blank">GitHub</a> +
+                  <a href="https://drive.google.com/file/d/1U1mihuzUHle64rJ4F5Ty1354QYQej6vt/view?usp=sharing" target="_blank">documentation</a>
+                </td>
+              </tr>
+            </table>
           </section>
         </section>
         <section id="details-card">
-          <table>
-            <tr>
-              <td>Role</td>
-              <td>Co-founder + Senior Engineer</td>
-            </tr>
-            <tr>
-              <td>Date</td>
-              <td>March 2020 &mdash; June 2020</td>
-            </tr>
-            <tr>
-              <td>Link</td>
-              <td>
-                <a href="https://github.com/project-rakan" target="_blank">GitHub</a> +
-                <a href="https://drive.google.com/file/d/1U1mihuzUHle64rJ4F5Ty1354QYQej6vt/view?usp=sharing" target="_blank">documentation</a>
-              </td>
-            </tr>
-          </table>
           <div class="break">
             <div class="hr"></div>
             <h3>Goals</h3>
