add remaining project pages

--- a/index.html
+++ b/index.html
@@ -99,61 +99,67 @@
           </a>
         </section>
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/flight-service.png" alt="Flight Service Icon">
-              <section class="description">
-                <h2>Flight Service</h2>
-                <h3>
-                  Individual class project
-                </h3>
+          <a href="projects/flights.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/flight-service.png" alt="Flight Service Icon">
+                <section class="description">
+                  <h2>Flight Service</h2>
+                  <h3>
+                    Individual class project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>
+                A CLI application that allows a user to search, book, pay, and cancel flights concurrently.
+              </p>
+              <div class="hr"></div>
+              <h3>Java, JUnit, Integration tests, JDBC, MSSQL, Azure</h3>
             </section>
-            <div class="hr"></div>
-            <p>
-              A CLI application that allows a user to search, book, pay, and cancel flights concurrently.
-            </p>
-            <div class="hr"></div>
-            <h3>Java, JUnit, Integration tests, JDBC, MSSQL, Azure</h3>
-          </section>
+          </a>
         </section>
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/search-engine.png" alt="Search Engine Icon">
-              <section class="description">
-                <h2>Search Engine</h2>
-                <h3>
-                  Individual class project
-                </h3>
+          <a href="projects/search-engine.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/search-engine.png" alt="Search Engine Icon">
+                <section class="description">
+                  <h2>Search Engine</h2>
+                  <h3>
+                    Individual class project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>
+                A multi-threaded web-based search engine that processes multi-word queries and static file queries.
+              </p>
+              <div class="hr"></div>
+              <h3>C, C++, Make, Google Test</h3>
             </section>
-            <div class="hr"></div>
-            <p>
-              A multi-threaded web-based search engine that processes multi-word queries and static file queries.
-            </p>
-            <div class="hr"></div>
-            <h3>C, C++, Make, Google Test</h3>
-          </section>
+          </a>
         </section>
         <section class="project-card">
-          <section class="project">
-            <section class="container">
-              <img src="img/yipper.png" alt="Yipper Icon">
-              <section class="description">
-                <h2>Yipper</h2>
-                <h3>
-                  Individual class project
-                </h3>
+          <a href="projects/yipper.html">
+            <section class="project">
+              <section class="container">
+                <img src="img/yipper.png" alt="Yipper Icon">
+                <section class="description">
+                  <h2>Yipper</h2>
+                  <h3>
+                    Individual class project
+                  </h3>
+                </section>
               </section>
+              <div class="hr"></div>
+              <p>
+                A social-media website that allows users to post and like messages. Similar to Twitter.
+              </p>
+              <div class="hr"></div>
+              <h3>JavaScript, Node.js, SQLite, HTML5, CSS3</h3>
             </section>
-            <div class="hr"></div>
-            <p>
-              A social-media website that allows users to post and like messages. Similar to Twitter.
-            </p>
-            <div class="hr"></div>
-            <h3>JavaScript, Node.js, SQLite, HTML5, CSS3</h3>
-          </section>
+          </a>
         </section>
       </section>
       <footer>
